--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
 </pre>
 <div class="main-carousel">
-<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="C:\Users\Akhil\Desktop\images\wide hero\svp.jpg"></div>
-<div class="cell"><div class="quality"> KGF2</div><img src="C:\Users\Akhil\Desktop\images\wide hero\kgf2.jpg"></div>
-<div class="cell"><div class="quality"> BLACK WIDOW</div><img src="C:\Users\Akhil\Desktop\images\wide hero\BW.jpg"></div>
-<div class="cell"><div class="quality"> RAADHE SHYAM</div><img src="C:\Users\Akhil\Desktop\images\wide hero\RS.jpg"></div>
-<div class="cell"><div class="quality"> LOVESTORY</div><img src="C:\Users\Akhil\Desktop\images\wide hero\LS.jpg"></div>
-<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="C:\Users\Akhil\Desktop\images\wide hero\VS.jpg"></div>
-<div class="cell"><div class="quality">RRR</div><img src="C:\Users\Akhil\Desktop\images\wide hero\rrr.jpg"></div>
-<div class="cell"><div class="quality"> PUSPA</div><img src="C:\Users\Akhil\Desktop\images\wide hero\puspa.jpg"></div>
+<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="svp.jpg"></div>
+<div class="cell"><div class="quality"> KGF2</div><img src="kgf2.jpg"></div>
+<div class="cell"><div class="quality"> BLACK WIDOW</div><img src="BW.jpg"></div>
+<div class="cell"><div class="quality"> RAADHE SHYAM</div><img src="RS.jpg"></div>
+<div class="cell"><div class="quality"> LOVESTORY</div><img src="LS.jpg"></div>
+<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="VS.jpg"></div>
+<div class="cell"><div class="quality">RRR</div><img src="rrr.jpg"></div>
+<div class="cell"><div class="quality"> PUSPA</div><img src="puspa.jpg"></div>
 
 </div>
 
@@ -112,7 +112,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\Tenet_movie.jpg">
+                <img src="Tenet_movie.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockerss.pw/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Tenet%20(2020)%20English%20HQ%20DVDScr/Tenet%20English%20HQ%20DVDScr%20Single%20Part/Tenet%20(2020)%20English%20HQ%20DVDScr%20Single%20Part.mp4">
@@ -124,7 +124,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\war poster.jpg">
+                <img src="war poster.jpg">
             </div>
             <!--text--------->
             <a href="https://etcrips.to/?p=22848">
@@ -136,7 +136,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\venom.jpg">
+                <img src="venom.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202018%20Dubbed%20Movies/Venom%20(2018)%20Telugu%20Original%20HD/Venom%20(2018)%20Telugu%20Dubbed%20Original%20HDRip%20Single%20Part.mp4">
@@ -148,7 +148,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\venky mama.jpg">
+                <img src="venky mama.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202019%20Movies/Venky%20Mama%20(2019)%20Telugu%20Proper%20HDRip/Venky%20Mama%20Telugu%20Proper%20HDRip%20Single%20Part/Venky%20Mama%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4">
@@ -172,7 +172,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\slsb.jpg">
+                <img src="slsb.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202020%20Movies/Solo%20Brathuke%20So%20Better%20(2020)%20Telugu%20HQ%20PreDVD/Solo%20Brathuke%20So%20Better%20Telugu%20HQ%20PreDVD%20Single%20Part/Solo%20Brathuke%20So%20Better%20(2020)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
@@ -184,7 +184,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\sammohanam.jpg">
+                <img src="sammohanam.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%20(2018)%20Movies/Sammohanam%20(2018)%20Telugu%20HDRip%20Original%20Audio/Sammohanam%20Telugu%20HDRip%20Single%20Part/Sammohanam%20(2018)%20Telugu%20HDRip%20Single%20Part%20-%20Original%20Audio.mp4">
@@ -196,7 +196,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\raja varu rani varu poste.jpg">
+                <img src="raja varu rani varu poste.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202019%20Movies/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip/Raja%20Vaaru%20Rani%20Gaaru%20Telugu%20Proper%20HDRip%20Single%20Part/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4">
@@ -208,7 +208,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\aakasame nee hadddu ra.jpg">
+                <img src="aakasame nee hadddu ra.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Aakaasam%20Nee%20Haddhu%20Ra%20(2020)%20Telugu%20Original%20HDRip/Aakaasam%20Nee%20Haddhu%20Ra%20Telugu%20Original%20HDRip%20Single%20Part/Aakaasam%20Nee%20Haddhu%20Ra%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -220,7 +220,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\alita.jpg">
+                <img src="alita.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202019%20Dubbed%20Movies/Alita%20Battle%20Angel%20(2019)%20Telugu%20HDRip%20(Original%20Audio)/Alita%20Battle%20Angel%20(2019)%20Telugu%20HDRip%20Single%20Part%20(Original%20Audio).mp4">
