--- a/movies page2.html
+++ b/movies page2.html
@@ -78,7 +78,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\paracite.jpg">
+                <img src="paracite.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202019%20Dubbed%20Movies/Parasite%20(2019)%20Telugu%20(Fan%20Dub)%20HDRip/Parasite%20(2019)%20Telugu%20(Fan%20Dubbed)%20HDRip%20Single%20Part.mp4">
@@ -90,7 +90,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\oray bujjiga.jpg">
+                <img src="oray bujjiga.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip/Orey%20Bujjiga%20Telugu%20Original%20HDRip%20Single%20Part/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -102,7 +102,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\nishabdam.jpg">
+                <img src="nishabdam.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.ws/files/Telugu%20Movies/Telugu%202020%20Movies/Nishabdham%20(2020)%20Telugu%20Original%20HDRip/Nishabdham%20Telugu%20Original%20HDRip%20Single%20Part/Nishabdham%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -114,7 +114,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\miss india.jpg">
+                <img src="miss india.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Miss%20India%20(2020)%20Telugu%20Original%20HDRip/Miss%20India%20Telugu%20Original%20HDRip%20Single%20Part/Miss%20India%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part%20Single%20Part.mp4">
@@ -126,7 +126,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\mattu vadalara.jpg">
+                <img src="mattu vadalara.jpg">
             </div>
             <!--text--------->
             <a href="https://vidoza.net/2u1ntw10rf4f.html">
@@ -138,7 +138,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\khaiti.jpg">
+                <img src="khaiti.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202019%20Movies/Khaidi%20(2019)%20Telugu%20Original%20HDRip/Khaidi%20Telugu%20Original%20HDRip%20Single%20Part/Khaidi%20(2019)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -150,7 +150,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\jallikattu.jpg">
+                <img src="jallikattu.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202020%20Movies/Jallikattu%20(2020)%20Telugu%20Original%20HDRip/Jallikattu%20Telugu%20Original%20HDRip%20Single%20Part/Jallikattu%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -162,7 +162,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\it.jpg">
+                <img src="it.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202019%20Dubbed%20Movies/IT%20Chapter%202%20(2019)%20Telugu%20Original%20HDRip/IT%20Chapter%202%20(2019)%20Telugu%20Dubbed%20Original%20HDRip%20Single%20Part.mp4">
@@ -174,7 +174,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\gunjan.jpg">
+                <img src="gunjan.jpg">
             </div>
             <!--text--------->
             <a href="https://abcvideo.cc/ixexv5m8xyk5.html">
@@ -186,7 +186,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\escape plan.jpg">
+                <img src="escape plan.jpg">
             </div>
             <!--text--------->
             <a href="http://upindia.mobi/543051/xy3firj">
@@ -198,7 +198,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\dumbo.jpg">
+                <img src="dumbo.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202019%20Dubbed%20Movies/Dumbo%20(2019)%20Telugu%20Proper%20HDRip%20(Original%20Audio)/Dumbo%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part%20(Original%20Audio).mp4">
@@ -210,7 +210,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\comali.jpg">
+                <img src="comali.jpg">
             </div>
             <!--text--------->
             <a href="#">
