--- a/movies page2.html
+++ b/movies page2.html
@@ -90,7 +90,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="oray bujjiga.jpg">
+                <img src="oray bujjiga.jpeg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip/Orey%20Bujjiga%20Telugu%20Original%20HDRip%20Single%20Part/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -150,7 +150,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="jallikattu.jpg">
+                <img src="jallikattu.jpeg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202020%20Movies/Jallikattu%20(2020)%20Telugu%20Original%20HDRip/Jallikattu%20Telugu%20Original%20HDRip%20Single%20Part/Jallikattu%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
@@ -186,7 +186,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="escape plan.jpg">
+                <img src="escape plan.jpeg">
             </div>
             <!--text--------->
             <a href="http://upindia.mobi/543051/xy3firj">
