--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!--menu-------------->
         <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Movies</a></li>
             <li><a href="#">Tv shows</a></li>
