--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </label>
         <!--menu-------------->
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Movies</a></li>
             <li><a href="#">Tv shows</a></li>
         </ul>
