--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Movies</a></li>
-            <li><a href="#">Tv shows</a></li>
+            <li><a href="construction.html">Movies</a></li>
+            <li><a href="construction.html">Tv shows</a></li>
         </ul>
         <!--search------------->
         <div class="search">
