--- a/construction.html
+++ b/construction.html
@@ -26,11 +26,11 @@
         </label>
         <!--menu-------------->
         <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Movies</a></li>
-            <li><a href="#">Tv shows</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="construction.html">Movies</a></li>
+            <li><a href="construction.html">Tv shows</a></li>
         </ul>
         <!--search------------->
         <div class="search">
