--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-	
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">	
 	
 </head>
 <body>
@@ -47,8 +47,8 @@
 
 
 </pre>
-
-<button onclick="myFunction()"> Dark mode</button>
+  <input type="button" class="w3-btn w3-black" value="Input Button" onclick="myFunction()">
+ Dark mode</button>
  
   <pre>
 </pre>
