--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="cell"><div class="quality"> BLACK WIDOW</div><img src="BW.jpg"></div>
 <div class="cell"><div class="quality"> RAADHE SHYAM</div><img src="RS.jpg"></div>
 <div class="cell"><div class="quality"> LOVESTORY</div><img src="LS.jpg"></div>
-<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="VS.jpg"></div>
+<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="VS.jpeg"></div>
 <div class="cell"><div class="quality">RRR</div><img src="rrr.jpg"></div>
 <div class="cell"><div class="quality"> PUSPA</div><img src="puspa.jpg"></div>
 
