--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 </pre>
 <div class="main-carousel">
-<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="svp.jpg"></div>
+<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="svp.jpeg"></div>
 <div class="cell"><div class="quality"> KGF2</div><img src="kgf2.jpg"></div>
 <div class="cell"><div class="quality"> BLACK WIDOW</div><img src="BW.jpg"></div>
 <div class="cell"><div class="quality"> RAADHE SHYAM</div><img src="RS.jpg"></div>
