--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 </pre>
 <div class="main-carousel">
-<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="svp.jpeg"></div>
+<div class="cell"><div class="quality"> SARKARU VAARI PAATA</div><img src="svp.jpg"></div>
 <div class="cell"><div class="quality"> KGF2</div><img src="kgf2.jpg"></div>
 <div class="cell"><div class="quality"> BLACK WIDOW</div><img src="BW.jpg"></div>
 <div class="cell"><div class="quality"> RAADHE SHYAM</div><img src="RS.jpg"></div>
 <div class="cell"><div class="quality"> LOVESTORY</div><img src="LS.jpg"></div>
-<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="VS.jpeg"></div>
+<div class="cell"><div class="quality"> VAKEEL SAAB</div><img src="VS.jpg"></div>
 <div class="cell"><div class="quality">RRR</div><img src="rrr.jpg"></div>
 <div class="cell"><div class="quality"> PUSPA</div><img src="puspa.jpg"></div>
 
