--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@ freeScroll: true
                 Alita Battle angel (2019) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
             </a>
         </div>
+	      <!--box-11------------------------>
+         <div class="movies-box">
+            <!--img------------>
+            <div class="movies-img">
+                <div class="quality">DvdRip</div>
+                <img src="krack.jpeg">
+            </div>
+            <!--text--------->
+            <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202021%20Movies/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20-%20TBL/Krack%20Telugu%20HQ%20PreDVD%20Single%20Part/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
+                Alita Battle angel (2019) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
+            </a>
+        </div>
     </section>
 <!--btns--------------->
     <div class="btns">
