--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ freeScroll: true
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202021%20Movies/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20-%20TBL/Krack%20Telugu%20HQ%20PreDVD%20Single%20Part/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
-                Alita Battle angel (2019) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
+                Krack (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
     </section>
