--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="krack.jpeg">
+                <img src="krack.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202021%20Movies/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20-%20TBL/Krack%20Telugu%20HQ%20PreDVD%20Single%20Part/Krack%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
