--- a/movie page3.html
+++ b/movie page3.html
@@ -26,11 +26,11 @@
         </label>
         <!--menu-------------->
         <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Movies</a></li>
-            <li><a href="#">Tv shows</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="construction.html">Movies</a></li>
+            <li><a href="construction.html">Tv shows</a></li>
         </ul>
         <!--search------------->
         <div class="search">
@@ -65,7 +65,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\mulan.jpg">
+                <img src="mulan.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Mulan%20(2020)%20English%20HDRip/Mulan%20English%20HDRip%20Single%20Part/Mulan%20(2020)%20English%20HDRip%20Single%20Part.mp4">
@@ -77,7 +77,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DVDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\tenet.jpg">
+                <img src="tenet.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Tenet%20(2020)%20English%20HQ%20DVDScr/Tenet%20English%20HQ%20DVDScr%20Single%20Part/Tenet%20(2020)%20English%20HQ%20DVDScr%20Single%20Part.mp4">
@@ -89,7 +89,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DVDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\penensula.jpg">
+                <img src="penensula.jpg">
             </div>
             <!--text--------->
             <a href="https://ww7.watchmovierulz.me/waaw/?l=mNrPaQI697Cd">
@@ -101,7 +101,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DVDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\solar impact.jpg">
+                <img src="solar impact.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Solar%20Impact%20(2020)%20English%20HDRip/Solar%20Impact%20English%20HDRip%20Single%20Part/Solar%20Impact%20(2020)%20English%20HDRip%20Single%20Part.mp4">
@@ -114,7 +114,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DVDRip</div>
-                <img src="C:\Users\Akhil\Desktop\posters\ld.jpg">
+                <img src="ld.jpg">
             </div>
             <!--text--------->
             <a href="http://www.kothamovies.link/files/Telugu%20Movies/Telugu%202019%20Movies/Lovers%20Day%20(2019)%20Original%20HDRip/Lovers%20Day%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
