--- a/movies page2.html
+++ b/movies page2.html
@@ -221,7 +221,7 @@
 <!--btns--------------->
     <div class="btns">
         <a href="index.html">Previous</a>
-        <a href="#">Next</a>
+        <a href="movie page3.html">Next</a>
     </div>
 
 <script>
