--- a/movie page3.html
+++ b/movie page3.html
@@ -77,7 +77,7 @@
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DVDRip</div>
-                <img src="tenet.jpg">
+                <img src="Tenet_movie.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.nl/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Tenet%20(2020)%20English%20HQ%20DVDScr/Tenet%20English%20HQ%20DVDScr%20Single%20Part/Tenet%20(2020)%20English%20HQ%20DVDScr%20Single%20Part.mp4">
