--- a/movie page3.html
+++ b/movie page3.html
@@ -122,7 +122,18 @@
             </a>
         </div>
 
-
+   <!--box-6------------------------>
+         <div class="movies-box">
+            <!--img------------>
+            <div class="movies-img">
+                <div class="quality">HDRip</div>
+                <img src="raja varu rani varu poste.jpg">
+            </div>
+            <!--text--------->
+            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202019%20Movies/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip/Raja%20Vaaru%20Rani%20Gaaru%20Telugu%20Proper%20HDRip%20Single%20Part/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4">
+                Rajavaru Ranigaru (2020) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
+            </a>
+        </div>
 
 
 
