--- a/movie page3.html
+++ b/movie page3.html
@@ -135,6 +135,18 @@
             </a>
         </div>
 
+	          <!--box-7------------------------>
+         <div class="movies-box">
+            <!--img------------>
+            <div class="movies-img">
+                <div class="quality">HDRip</div>
+                <img src="sammohanam.jpg">
+            </div>
+            <!--text--------->
+            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%20(2018)%20Movies/Sammohanam%20(2018)%20Telugu%20HDRip%20Original%20Audio/Sammohanam%20Telugu%20HDRip%20Single%20Part/Sammohanam%20(2018)%20Telugu%20HDRip%20Single%20Part%20-%20Original%20Audio.mp4">
+                Sammohanam (2019) Full Movie[In Telugu]  | HDRip 1080p HD
+            </a>
+        </div>
 
 
 
