--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-
+<meta name="google-site-verification" content="jrGiiRmk7f0JSC9hYqEwrkyxIGIuTFK67rrxXMiTMNs" />
 	
 </head>
 <body>
