--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 </pre>
 
 <center>
-<div style= "background-color:#cf6a6a61;height:150px;width:645px";>
+<div style= "background-color:#cf6a6a61";>
 <pre>
 </pre>
 <p>Once again welcome to <b>MOVIE PLUS </b>. 
