--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                
             </div></div></section>
 <center>
-<div style= "background-color:#cf6a6a61;height:200px;width:645px";>
+<div style= "background-color:#cf6a6a61";>
 <pre>
 </pre>
 <p>Once again welcome to <b>MOVIE PLUS </b>. 
