--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,9 @@ After the sending the mail we will update the movie soon..
 <li><b>Mail: </b>akhilmovies1@gmail.com</li>
 <li><b>location: </b>India</li>
 <div style= "background-color:#cf6a6a61";>
-
+<center>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15280278.016642287!2d73.69887707462935!3d20.769567287180756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1611985916447!5m2!1sen!2sin" width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</center>
 </div>
 
 
@@ -119,8 +121,7 @@ After the sending the mail we will update the movie soon..
 
             </div></div></section>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15280278.016642287!2d73.69887707462935!3d20.769567287180756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1611985916447!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
+   
 
 <script>
 function myFunction() {
