--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@ freeScroll: true
                 <img src="scary stories tells in dark.jpg">
             </div>
             <!--text--------->
-            <a href="http://dl1.moviezzwaphd.xyz/Telugu%20Dubbed%20Movies%20[Hollywood]/Scary-Stories-To-Tell-In-the-Dark-(2019)-Telugu-Dubbed-(Fan-Dub)-Dual-Auds/Scary-Stories-to-tell-in-the-Dark-(2019)-BRRip-Telugu-(Fan-Dub)-Eng-Dual-Auds-Single-Part-HQ.Mp4?st=E4lyqtBZ4zNDTzttLpqX9A&e=1613141325
-">
+            <a href="https://gofile.io/d/g1nmYM">
                 Scary Stories Tells in Dark.. (2019) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
@@ -333,7 +332,7 @@ freeScroll: true
                 <img src="uppena.jpg">
             </div>
             <!--text--------->
-            <a href="
+            <a href="https://wetransfer.com/downloads/b443e4654392a5524cc656957017314820210213040021/939f77
 		     ">
                 Uppena (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
