--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ freeScroll: true
                 <img src="uppena.jpg">
             </div>
             <!--text--------->
-            <a href="https://wetransfer.com/downloads/b443e4654392a5524cc656957017314820210213040021/939f77
+            <a href="https://upindia.mobi/584808/ytlM7ul
 		     ">
                 Uppena (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
