--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ freeScroll: true
                 <img src="uppena.jpg">
             </div>
             <!--text--------->
-            <a href="https://upindia.mobi/584808/ytlM7ul
+            <a href="https://new.gdtot.com/file/481247994
 		     ">
                 Uppena (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
@@ -348,7 +348,7 @@ freeScroll: true
             <!--text--------->
             <a href="https://files.im/snxlo6a1gmjy
 		     ">
-                Uppena (2021) Full Movie[In Telugu]  | HDRip 720p HD
+                Live telecast (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
 	    
