--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ freeScroll: true
                 <img src="uppena.jpg">
             </div>
             <!--text--------->
-            <a href="https://new.gdtot.com/file/481247994
+            <a href="https://drive.google.com/file/d/1NO26v-5gfy2UONqXVVNfJ9l16y2MrMFb/view?usp=drivesdk
 		     ">
                 Uppena (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
