--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ freeScroll: true
                 <img src="naandi.jpg">
             </div>
             <!--text--------->
-            <a href="https://files.im/snxlo6a1gmjy
+            <a href="https://upindia.mobi/586984/cGHv5RY#
 		     ">
                 Naandi (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
