--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ freeScroll: true
                 <img src="naandi.jpg">
             </div>
             <!--text--------->
-            <a href="https://upindia.mobi/586984/cGHv5RY#
+            <a href="http://www.dongamovies.site/files/Telugu%20Movies/Telugu%202021%20Movies/Naandhi%20(2021)%20Telugu%20Original%20HD/Naandhi%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
 		     ">
                 Naandi (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
