--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ freeScroll: true
                 Naandi (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
-	                                	       	           <!--box-22------------------------>
+	                                	       	           <!--box-23------------------------>
          <div class="movies-box">
             <!--img------------>
             <div class="movies-img">
@@ -374,6 +374,18 @@ freeScroll: true
             <!--text--------->
             <a href="http://www.dongamovies.site/files/Telugu%20Movies/Telugu%202021%20Movies/Mosagallu%20(2021)%20Telugu%20HQ/Mosagallu%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4 ">
                 Mosagallu (2021) Full Movie[In Telugu]  | HDRip 720p HD
+            </a>
+        </div>
+	                                    	       	           <!--box-24------------------------>
+         <div class="movies-box">
+            <!--img------------>
+            <div class="movies-img">
+                <div class="quality">DvdRip</div>
+                <img src="gaali.jpg">
+            </div>
+            <!--text--------->
+            <a href="http://www.dongamovies.site/files/Telugu%20Movies/Telugu%202021%20Movies/Gaali%20Sampath%20(2021)%20Telugu%20Original%20HD/Gaali%20Sampath%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4 ">
+                Gaali sampath (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
 	    
