--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ freeScroll: true
                 <img src="Red.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.site/files/Telugu%20Movies/Telugu%202021%20Movies/Red%20(2021)%20Telugu%20HQ%20PreDVD/Red%20Telugu%20HQ%20PreDVD%20Single%20Part/Red%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4
+            <a href="http://www.dongamovies.site/files/Telugu%20Movies/Telugu%202021%20Movies/Red%20(2021)%20Telugu%20Original%20HD/Red%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
 
 ">
                 Red (2021) Full Movie[In Telugu]  | HDRip 720p HD
