--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ freeScroll: true
                 <img src="live.jpg">
             </div>
             <!--text--------->
-            <a href="https://files.im/snxlo6a1gmjy
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Live%20Telecast%20(2021)%20Telugu%20S01%20EP%20(01%20To%2007)%20HDRip/Live%20Telecast%20Telugu%20S01%20EP%20(01%20To%2007)%20HDRip%20Single%20Part/Live%20Telecast%20(2021)%20Telugu%20S01%20EP%20(01%20To%2007)%20HDRip%20Single%20Part.mp4
 		     ">
                 Live telecast (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
