--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ freeScroll: true
                 <img src="war poster.jpg">
             </div>
             <!--text--------->
-            <a href="https://etcrips.to/?p=22848">
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202019%20Movies/War%20(2019)%20Telugu%20Original%20HDRip/War%20Telugu%20Original%20HDRip%20Single%20Part/War%20(2019)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
                 WAR (2019) Full Movie[In Telugu]  | HDRip 
             </a>
         </div>
