--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ freeScroll: true
                 <img src="scary stories tells in dark.jpg">
             </div>
             <!--text--------->
-            <a href="https://gofile.io/d/g1nmYM">
+            <a href="https://meetdownload.com/344d05612f814bc68769d22b104aad43/waploaded-scary-stories-to-tell-in-the-dark-2019-mp4">
                 Scary Stories Tells in Dark.. (2019) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
