--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@ freeScroll: true
                 <img src="30 days.jpeg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.site/files/Telugu%20Movies/Telugu%202021%20Movies/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD/30%20Rojullo%20Preminchadam%20Ela%20Telugu%20Proper%20PreDVD%20Single%20Part/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD%20Single%20Part.mp4
-		     ">
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD/30%20Rojullo%20Preminchadam%20Ela%20Telugu%20Proper%20PreDVD%20Single%20Part/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD%20Single%20Part.mp4  ">
                 30 Rojullo preminchadam ala.. (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
@@ -307,7 +306,7 @@ freeScroll: true
                 <img src="zr.jpeg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.site/files/Telugu%20Movies/Telugu%202021%20Movies/Zombie%20Reddy%20(2021)%20Telugu%20HQ%20PreDVD/Zombie%20Reddy%20Telugu%20HQ%20PreDVD%20Single%20Part/Zombie%20Reddy%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Zombie%20Reddy%20(2021)%20Telugu%20HQ%20PreDVD/Zombie%20Reddy%20Telugu%20HQ%20PreDVD%20Single%20Part/Zombie%20Reddy%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4">
                 Zombie Reddy.. (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
