--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ freeScroll: true
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="ckc.jpeg">
+                <img src="ckc.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Chaavu%20Kaburu%20Challaga%20(2021)%20Telugu%20Original%20HDRip/Chaavu%20Kaburu%20Challaga%20Telugu%20Original%20HDRip%20Single%20Part/Chaavu%20Kaburu%20Challaga%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
