--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
                 <img src="zr.jpeg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Zombie%20Reddy%20(2021)%20Telugu%20Original%20HDRip/Zombie%20Reddy%20Telugu%20Original%20HDRip%20Single%20Part/Zombie%20Reddy%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
-">
+            <a href="http://www.dongamovies.site/files/Telugu%20Movies/Telugu%202021%20Movies/Zombie%20Reddy%20(2021)%20Telugu%20Original%20HD/Zombie%20Reddy%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
                 zombie reddy (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
