--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="kong.jpeg">
+                <img src="https://m.media-amazon.com/images/M/MV5BZmYzMzU4NjctNDI0Mi00MGExLWI3ZDQtYzQzYThmYzc2ZmNjXkEyXkFqcGdeQXVyMTEyMjM2NDc2._V1_.jpg">
             </div>
             <!--text--------->
             <a href="http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbed%20Movies/Godzilla%20Vs%20Kong%20(2021)%20Telugu%20HDCamRip/Godzilla%20Vs%20Kong%20(2021)%20Telugu%20HDCamRip%20Single%20Part.mp4">
