--- a/movies page2.html
+++ b/movies page2.html
@@ -93,7 +93,8 @@
                 <img src="oray bujjiga.jpeg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip/Orey%20Bujjiga%20Telugu%20Original%20HDRip%20Single%20Part/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202020%20Movies/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip/Orey%20Bujjiga%20Telugu%20Original%20HDRip%20Single%20Part/Orey%20Bujjiga%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
+">
                 Oray Bujjiga (2020) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
         </div>
@@ -105,7 +106,8 @@
                 <img src="nishabdam.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.ws/files/Telugu%20Movies/Telugu%202020%20Movies/Nishabdham%20(2020)%20Telugu%20Original%20HDRip/Nishabdham%20Telugu%20Original%20HDRip%20Single%20Part/Nishabdham%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/download/file/6841
+">
                 Nishabdam (2020) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
         </div>
@@ -117,7 +119,8 @@
                 <img src="miss india.jpg"> 
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202020%20Movies/Miss%20India%20(2020)%20Telugu%20Original%20HDRip/Miss%20India%20Telugu%20Original%20HDRip%20Single%20Part/Miss%20India%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/download/file/7098
+">
                  Miss india (2020) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
         </div>
@@ -129,7 +132,7 @@
                 <img src="mattu vadalara.jpg">
             </div>
             <!--text--------->
-            <a href="https://vidoza.net/2u1ntw10rf4f.html">
+            <a href="">
                 Mattu Vadalara(2019) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
             </a>
         </div>
@@ -141,7 +144,8 @@
                 <img src="khaiti.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202019%20Movies/Khaidi%20(2019)%20Telugu%20Original%20HDRip/Khaidi%20Telugu%20Original%20HDRip%20Single%20Part/Khaidi%20(2019)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/download/file/4904
+">
                 Khaidi (2019) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
         </div>
@@ -153,7 +157,8 @@
                 <img src="jallikattu.jpeg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.nl/files/Telugu%20Movies/Telugu%202020%20Movies/Jallikattu%20(2020)%20Telugu%20Original%20HDRip/Jallikattu%20Telugu%20Original%20HDRip%20Single%20Part/Jallikattu%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202020%20Movies/Jallikattu%20(2020)%20Telugu%20Original%20HDRip/Jallikattu%20Telugu%20Original%20HDRip%20Single%20Part/Jallikattu%20(2020)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
+">
                 Jallikattu (2020) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
             </a>
         </div>
