--- a/movie page3.html
+++ b/movie page3.html
@@ -104,7 +104,7 @@
                 <img src="solar impact.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.nl/files/English%20Movies%20(Hollywood)/English%202020%20Movies/Solar%20Impact%20(2020)%20English%20HDRip/Solar%20Impact%20English%20HDRip%20Single%20Part/Solar%20Impact%20(2020)%20English%20HDRip%20Single%20Part.mp4">
+            <a href="https://www.jiorockers.vin/download/file/6229">
              Solar Impact (2020) English HDRip Single Part.Mp4
             </a>
         </div>
@@ -117,7 +117,8 @@
                 <img src="ld.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.kothamovies.link/files/Telugu%20Movies/Telugu%202019%20Movies/Lovers%20Day%20(2019)%20Original%20HDRip/Lovers%20Day%20Telugu%20Original%20HDRip%20Single%20Part.mp4">
+            <a href="https://www.jiorockers.vin/download/file/5735
+">
              Lovers day (2019) Telugu HDRip Single Part.Mp4
             </a>
         </div>
@@ -130,7 +131,7 @@
                 <img src="raja varu rani varu poste.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%202019%20Movies/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip/Raja%20Vaaru%20Rani%20Gaaru%20Telugu%20Proper%20HDRip%20Single%20Part/Raja%20Vaaru%20Rani%20Gaaru%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4">
+            <a href="http://www.jiorockers.vin/download/file/5046">
                 Rajavaru Ranigaru (2020) Full Movie[In Telugu] With English Subtitles | HDRip 1080p HD
             </a>
         </div>
@@ -143,7 +144,8 @@
                 <img src="sammohanam.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.link/files/Telugu%20Movies/Telugu%20(2018)%20Movies/Sammohanam%20(2018)%20Telugu%20HDRip%20Original%20Audio/Sammohanam%20Telugu%20HDRip%20Single%20Part/Sammohanam%20(2018)%20Telugu%20HDRip%20Single%20Part%20-%20Original%20Audio.mp4">
+            <a href="https://www.jiorockers.vin/download/file/2979
+">
                 Sammohanam (2019) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
         </div>
