--- a/movies page2.html
+++ b/movies page2.html
@@ -244,8 +244,7 @@
                 <img src="bahubali2.jpg">
             </div>
             <!--text--------->
-            <a href="http://dl2.moviezzwaphd.xyz/Telugu%20(2017)%20Movies/Baahubali-2-The-Conclusion-(2017)-Telugu-Original/Baahubali-2-The-Conclusion-(2017)-Telugu-Original-HDRip-Single-Part-HQ.Mp4?st=_WGPZ97BvSS5Mz-wsSTTXw&e=1613140779
-
+            <a href="https://www.jiorockers.vin/download/file/5911
 ">
                 Bahubali 2 (2017) Full Movie[In telugu] | HDRip 1080p HD
             </a>
@@ -259,8 +258,7 @@
                 <img src="guru telugu.jpg">
             </div>
             <!--text--------->
-            <a href="http://dl2.moviezzwaphd.xyz/Telugu%20(2017)%20Movies/Guru-(2017)-Telugu-Original/Guru-(2017)-Telugu-Original-HDRip-Single-Part-HQ.Mp4?st=mT3uo21N0mFst7OymGsNTA&e=1613140865
-
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%20(2017)%20Movies/Guru%20(2017)%20Telugu%20Proper%20HDRip/Guru%20Telugu%20Proper%20HDRip%20Single%20Part/Guru%20(2017)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4
 ">
                 Guru (2017) Full Movie[In telugu] | HDRip 1080p HD
             </a>
