--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="wild.jpeg">
+                <img src="wild.jpg">
             </div>
             <!--text--------->
             <a href="
