--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="vs.jpeg">
+                <img src="vs.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Vakeel%20Saab%20(2021)%20Telugu%20HQ%20PreDVD/Vakeel%20Saab%20Telugu%20HQ%20PreDVD%20Single%20Part/Vakeel%20Saab%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4
@@ -417,7 +417,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
             <!--img------------>
             <div class="movies-img">
                 <div class="quality">DvdRip</div>
-                <img src="yuva.jpeg">
+                <img src="yuva.jpg">
             </div>
             <!--text--------->
             <a href="http://www.jiorockers.vin/download/file/7761
