--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
                 <img src="vs.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Vakeel%20Saab%20(2021)%20Telugu%20HQ%20PreDVD/Vakeel%20Saab%20Telugu%20HQ%20PreDVD%20Single%20Part/Vakeel%20Saab%20(2021)%20Telugu%20HQ%20PreDVD%20Single%20Part.mp4
+            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/Vakeel%20Saab%20(2021)%20Telugu%20Original%20HDRip/Vakeel%20Saab%20Telugu%20Original%20HDRip%20Single%20Part/Vakeel%20Saab%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4
 ">
                 Vakeel Saab (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
