--- a/index.html
+++ b/index.html
@@ -9,7 +9,39 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <meta name="google-site-verification" content="jrGiiRmk7f0JSC9hYqEwrkyxIGIuTFK67rrxXMiTMNs" />
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 	
+	
+	
+	
+	</style>
 </head>
 <body>
 
@@ -29,7 +61,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="construction.html">Movies</a></li>
+		<div class="dropdown">
+            <li><a href="construction.html">Languages</a></li>
+			<div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
             <li><a href="construction.html">Tv shows</a></li>
         </ul>
         <!--search------------->
