--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 		<div class="dropdown">
             <li><a href="construction.html">Languages</a></li>
 			<div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">English</a>
+    <a href="#">Telugu</a>
+    <a href="#">Hindi</a>
   </div>
 </div>
             <li><a href="construction.html">Tv shows</a></li>
