--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <meta name="google-site-verification" content="jrGiiRmk7f0JSC9hYqEwrkyxIGIuTFK67rrxXMiTMNs" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3619656000705340"
+     crossorigin="anonymous"></script>
 <style>
 .dropdown {
   position: relative;
@@ -30,6 +32,7 @@
   text-decoration: none;
   display: block;
 }
+
 
 .dropdown-content a:hover {background-color: #ddd;}
 
@@ -505,7 +508,7 @@ function myFunction() {
     <!--footer------------------>
     <footer>
         <p>Site by Akhil kumar</p>
-        <p>Copyright 2021 - By AkhilMovies</p>
+        <p>Copyright 2021 movieplus/p>
     </footer>
 </body>
 </html>
