--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ http://www.naadubmovies.com/files/Telugu%20Dubbed%20Movies/Telugu%202021%20Dubbe
             </div>
             <!--text--------->
             <a href=" http://103.16.24.58/Downloads/Movies/Bollywood/2015/Dilwale.2015.Hindi.720p.BluRay.x265.ShAaNiG.mkv">
-                Sanam Teri Kasam Full Movie[In Hindi]  | HDRip 720p HD
+                Dilwale Full Movie[In Hindi]  | HDRip 720p HD
             </a>
         </div>
 	    
