--- a/movies page2.html
+++ b/movies page2.html
@@ -8,7 +8,40 @@
 <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 	
+	
+	
+	
+	</style>	
 	
 </head>
 <body>
@@ -29,7 +62,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="construction.html">Movies</a></li>
+           	<div class="dropdown">
+            <li><a href="construction.html">Languages</a></li>
+			<div class="dropdown-content">
+    <a href="#">English</a>
+    <a href="#">Telugu</a>
+    <a href="#">Hindi</a>
+  </div>
+</div>
             <li><a href="construction.html">Tv shows</a></li>
         </ul>
         <!--search------------->
