--- a/index.html
+++ b/index.html
@@ -156,19 +156,7 @@ freeScroll: true
         <h2><center>Movies</center></h2>
     </div>
     <section id="movies-list">
-        <!--box-1------------------------>
-        <div class="movies-box">
-            <!--img------------>
-            <div class="movies-img">
-                <div class="quality">HDRip</div>
-                <img src="Tenet_movie.jpg">
-            </div>
-            <!--text--------->
-            <a href="http://www.jiorockers.vin/download/file/7209
-">
-                TENET (2021) Full movie
-            </a>
-        </div>
+       
          <!--box-2------------------------>
          <div class="movies-box">
             <!--img------------>
@@ -201,7 +189,7 @@ freeScroll: true
                 <img src="venky mama.jpg">
             </div>
             <!--text--------->
-            <a href="http://www.jiorockers.vin/download/file/4793
+            <a href="http://www.jiorockers.uk/files/Telugu%20Movies/Telugu%202019%20Movies/Venky%20Mama%20(2019)%20Telugu%20Proper%20HDRip/Venky%20Mama%20Telugu%20Proper%20HDRip%20Single%20Part/Venky%20Mama%20(2019)%20Telugu%20Proper%20HDRip%20Single%20Part.mp4
 ">
                 VENKY MAMA (2019) Full Movie[In Telugu]  | HDRip 1080p HD
             </a>
