--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div class="cell"><div class="quality"> PUSPA</div><img src="puspa.jpg"></div>
 	<div class="cell"><div class="quality"> Tuck Jagadish</div><img src="https://www.filmibeat.com/ph-big/2020/12/tuck-jagadish_160887253220.jpg"></div>
 <div class="cell"><div class="quality"> Major</div><img src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/12/major-movie-1608181354.jpg"></div>
-<div class="cell"><div class="quality"> Virata Parvam</div><img src="https://assets.thehansindia.com/h-upload/2020/05/09/967825-virata-parvam.webp"></div>
+<div class="cell"><div class="quality"> Virata Parvam</div><img src="https://static.toiimg.com/thumb/msid-76190861,width-800,height-600,resizemode-75,imgsize-395840,pt-32,y_pad-40/76190861.jpg"></div>
 
 </div>
 
