--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
 		<div class="dropdown">
-            <li><a href="construction.html">Languages</a></li>
+            <li><a href="">Languages</a></li>
 			<div class="dropdown-content">
-    <a href="#">English</a>
-    <a href="#">Telugu</a>
-    <a href="#">Hindi</a>
+    <a href="construction.html">English</a>
+    <a href="telugu.html">Telugu</a>
+    <a href="construction.html">Hindi</a>
   </div>
 </div>
             <li><a href="construction.html">Tv shows</a></li>
