--- a/movie page3.html
+++ b/movie page3.html
@@ -210,8 +210,8 @@
                 <div class="quality">DvdRip</div>
                 <img src="30 days.jpeg">
             </div>
-            <!--text--------->
-            <a href="http://www.jiorockers.vin/files/Telugu%20Movies/Telugu%202021%20Movies/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD/30%20Rojullo%20Preminchadam%20Ela%20Telugu%20Proper%20PreDVD%20Single%20Part/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Proper%20PreDVD%20Single%20Part.mp4  ">
+            <!--text---------
+            <a href="http://www.jiorockers.uk/files/Telugu%20Movies/Telugu%202021%20Movies/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Original%20HDRip/30%20Rojullo%20Preminchadam%20Ela%20Telugu%20Original%20HDRip%20Single%20Part/30%20Rojullo%20Preminchadam%20Ela%20(2021)%20Telugu%20Original%20HDRip%20Single%20Part.mp4  ">
                 30 Rojullo preminchadam ala.. (2021) Full Movie[In Telugu]  | HDRip 720p HD
             </a>
         </div>
