--- a/movies page2.html
+++ b/movies page2.html
@@ -63,10 +63,10 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
            	<div class="dropdown">
-            <li><a href="construction.html">Languages</a></li>
+            <li><a href="">Languages</a></li>
 			<div class="dropdown-content">
-    <a href="#">English</a>
-    <a href="#">Telugu</a>
+    <a href="english.html">English</a>
+    <a href="telugu.html">Telugu</a>
     <a href="#">Hindi</a>
   </div>
 </div>
