--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="dropdown">
             <li><a href="">Languages</a></li>
 			<div class="dropdown-content">
-    <a href="construction.html">English</a>
+    <a href="english.html">English</a>
     <a href="telugu.html">Telugu</a>
     <a href="construction.html">Hindi</a>
   </div>
