--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
 		<div class="dropdown">
-            <li><a href="">Languages</a></li>
+            <li>Languages</li>
 			<div class="dropdown-content">
     <a href="english.html">English</a>
     <a href="telugu.html">Telugu</a>
