--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
 <div class="movies-heading">
-        <h2><marquee >Upcoming Blockbusters..</marquee></h2>
+        <h2><center>Upcoming Blockbusters..</center></h2>
     </div>
 <pre>
 
