--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <center>
 <h4>Welcome to MOVIE PLUS..</h4>
 </center>
+<p>You must<a href="https://unbattered-encounte.000webhostapp.com/"> <button class="dropbtn";>Log in</button></a> to view additional content.</p>
 
 
 <div class="movies-heading">
