--- a/about.html
+++ b/about.html
@@ -102,6 +102,7 @@
 </pre>
 
 
+<p>You must<a href="https://unbattered-encounte.000webhostapp.com/"> <button class="dropbtn";>Log in</button></a> to view additional content.</p>
 
 
    <div class="movies-heading">
