--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,8 @@
 <pre>
 
 </pre>
+	<p>You must<a href="https://unbattered-encounte.000webhostapp.com/"> <button class="dropbtn";>Log in</button></a> to view additional content.</p>
+
    <div class="movies-heading">
         <h2><center>Contact Page</center></h2>
     </div>
